--- a/packages/SystemUI/res/values/slim_strings.xml
+++ b/packages/SystemUI/res/values/slim_strings.xml
@@ -31,4 +31,9 @@
     <!-- SU notification -->
     <string name="su_session_active">SU session active</string>
 
+   <!-- The text for the button in the notification window-shade that clears
+         all of the currently visible notifications. [CHAR LIMIT=10]-->
+    <string name="clear_recents">Close all recent</string>
+
+
 </resources>
