--- a/core/res/res/values/slim_symbols.xml
+++ b/core/res/res/values/slim_symbols.xml
@@ -105,4 +105,9 @@
   <!-- Hardware key rebinding -->
   <java-symbol type="integer" name="config_deviceHardwareKeys" />
 
+  <!-- Flashlight notification -->
+  <java-symbol type="string" name="notification_flashlight_on_title" />
+  <java-symbol type="string" name="notification_flashlight_on_summary" />
+  <java-symbol type="drawable" name="ic_signal_flashlight_disable" />
+
 </resources>
