--- a/packages/SystemUI/res/layout-sw600dp/navigation_bar.xml
+++ b/packages/SystemUI/res/layout-sw600dp/navigation_bar.xml
@@ -41,31 +41,14 @@
             >
 
             <!-- navigation controls -->
-            <FrameLayout
+            <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu_left"
                 android:layout_width="@dimen/navigation_extra_key_width"
                 android:layout_height="match_parent"
+                android:src="@drawable/ic_sysbar_menu"
+                systemui:keyCode="82"
                 android:layout_weight="0"
-                android:layout_marginStart="2dp" >
-                <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu_left"
-                    android:layout_width="@dimen/navigation_extra_key_width"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_sysbar_menu"
-                    android:scaleType="centerInside"
-                    android:layout_marginStart="2dp"
-                    systemui:keyCode="82"
-                    android:visibility="invisible"
-                    android:contentDescription="@string/accessibility_menu"
-                    />
-                <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/ime_left"
-                    android:layout_width="@dimen/navigation_extra_key_width"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_sysbar_ime_left"
-                    android:scaleType="centerInside"
-                    android:layout_marginStart="2dp"
-                    systemui:keyCode="21"
-                    android:visibility="gone"
-                    />
-            </FrameLayout>
+                android:visibility="invisible"
+                android:contentDescription="@string/accessibility_menu" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -123,15 +106,6 @@
                     systemui:keyCode="82"
                     android:visibility="invisible"
                     android:contentDescription="@string/accessibility_menu"
-                    />
-                <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/ime_right"
-                    android:layout_width="@dimen/navigation_extra_key_width"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_sysbar_ime_right"
-                    android:scaleType="centerInside"
-                    android:layout_marginEnd="2dp"
-                    systemui:keyCode="22"
-                    android:visibility="gone"
                     />
                 <com.android.systemui.statusbar.policy.KeyButtonView
                     android:id="@+id/ime_switcher"
