--- a/packages/SystemUI/res/values/slim_strings.xml
+++ b/packages/SystemUI/res/values/slim_strings.xml
@@ -25,21 +25,21 @@
     <string name="battery_level_template_charging" translatable="false"><xliff:g id="level" example="45">%d</xliff:g>~</string>
 
     <!--ScreenShot Trash-->
-    <string name="screenshot_notification_delete">Delete</string>
-    <string name="screenshot_delete_confirmation">Screenshot deleted.</string>
+    <string name="screenshot_notification_delete">Borrar</string>
+    <string name="screenshot_delete_confirmation">Captura de pantalla borrada.</string>
 
     <!-- SU notification -->
     <string name="su_session_active">SU session active</string>
 
    <!-- The text for the button in the notification window-shade that clears
          all of the currently visible notifications. [CHAR LIMIT=10]-->
-    <string name="clear_recents">Close all recent</string>
+    <string name="clear_recents">Cerrar recientes</string>
 
     <!-- Kill app toast -->
-    <string name="app_killed_message">App Killed</string>
+    <string name="app_killed_message">Aplicación cerrada</string>
 
     <!-- Screenshot -->
-    <string name="shortcut_screenshot">Screenshot</string>
+    <string name="shortcut_screenshot">Captura de pantalla</string>
 
     <!-- Heads up -->
     <string name="heads_up_snooze_message">Heads up is disabled for <xliff:g id="number">%d</xliff:g> minutes.</string>
