--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1059,8 +1059,10 @@
          that matches the signature of at least one package on this list.
          -->
     <string-array name="config_locationProviderPackageNames" translatable="false">
-        <!-- The standard AOSP fused location provider -->
+         <!-- The standard AOSP fused location provider -->
         <item>com.android.location.fused</item>
+        <!-- The Google provider -->
+        <item>com.google.android.gms</item>
     </string-array>
 
     <!-- This string array can be overriden to enable test location providers initially. -->
